Fix outline clipping on stick nav
closes LS-2627
flag = sticky_left_nav

Test plan:
 - Turn on sticky_left_nav siteadmin FF
 - In a course, click a navigation item, and expect to see the blue
   focus outline on all 4 sides
 - Expect navigation to still stick and scroll on small windows

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/273317
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
QA-Review: Robin Kuss <rkuss@instructure.com>
Product-Review: Jackson Howe <jackson.howe@instructure.com>

--- a/app/stylesheets/base/_ic_app_layout.scss
+++ b/app/stylesheets/base/_ic_app_layout.scss
@@ -280,7 +280,7 @@ body:not(.course-menu-expanded) {
   }
   &.ic-sticky-on {
     bottom: 0;
-    padding-top: 0;
+    padding: 0;
   }
   // account for the course term showing in the left-hand sub-nav
   #section-tabs-header-subtitle {
@@ -292,7 +292,7 @@ body:not(.course-menu-expanded) {
   position: sticky;
   top: 0;
   max-height: 100vh;
-  padding: $ic-sp*2 0 $ic-breadcrumbs-height;
+  padding: direction-sides($ic-sp*2 $ic-sp $ic-breadcrumbs-height $ic-sp*2);
   box-sizing: border-box;
   overflow-y: auto;
   overscroll-behavior-y: contain;
